--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ header h3 {
     margin-top: -.4em;
 }
 
+.venue {
+    font-weight: 400;
+    font-size: 1.1em;
+    margin-top: -.2em;
+}
+
 .section {
     font-weight: 400;
     max-width: 850px;
@@ -56,6 +62,16 @@ header h3 {
 }
 
 .title_link:hover {
+    color: #d0d0d0;
+	border-bottom: 3px #c0c0c0;
+}
+
+.venue_link {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.venue_link:hover {
     color: #d0d0d0;
 	border-bottom: 3px #c0c0c0;
 }
