--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 @import url(
     'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css'
 );
+@import url(
+    "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
+);
 
 
 body {
@@ -196,6 +199,9 @@ a .fab.fa-github {
     vertical-align: bottom;
     font-size: 24px; /* adjust size as needed */
     margin: 0px 7px;
+}
+a .ai-arxiv {
+    color: #E7352B; /* Set your desired color (arXiv red) */
 }
 
 .eval-button-small {
